--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /homerweb/
+RewriteRule ^(application) - [F,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteRule .* index.php/$0 [PT,L]
